[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/Dimesion_door_rainbow.png" type="Texture" id=1]
[ext_resource path="res://Textures/Dimesion_door_mask.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Dimension_door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12 )

[node name="Dimension_door" type="Node2D"]
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
mode = 3
range_item_cull_mask = 2

[node name="Sprite" type="Sprite" parent="Light2D"]
light_mask = 2
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
scale = Vector2( 0.5, 0.75 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 1 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
